--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-loader-spinner": "^6.1.6",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
